--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
                 </div>
                 <div id="form">
                     <label for="name">Name</label>
-                    <input type="text" id="name" name="name" placeholder="Your name.." required>
+                    <input type="text" id="name" name="name" placeholder="Your name..">
                     <label for="age">Age</label>
-                    <input type="number" id="age" name="age" placeholder="Your age.." required>
+                    <input type="number" id="age" name="age" placeholder="Your age..">
                     <label for="selectgen">Gender</label>
                     <div id="selectgen">
                         <input type="radio" id="male" name="gender" value="Male" checked><label for="male">Male</label>
@@ -24,22 +24,22 @@
                         <input type="radio" id="other" name="gender" value="Other" ><label for="other">Other</label>
                     </div>
                     <label for="email">Email</label>
-                    <input type="email" id="emailadd" name="email" placeholder="john@example.com" required>
+                    <input type="email" id="emailadd" name="email" placeholder="john@example.com">
                     <label for="phone">Phone</label>
-                    <input type="tel" id="phone" name="phone" placeholder="0000000000" required>
+                    <input type="tel" id="phone" name="phone" placeholder="0000000000">
                     <label for="country">Country</label>
-                    <select id="country" name="country" required>
+                    <select id="country" name="country">
                         <option value="">Select Country</option>
                         <option value="Australia">Australia</option>
                         <option value="Canada">Canada</option>
                         <option value="India">India</option>
                     </select>
                     <label for="state">State</label>
-                    <select id="state" name="state" required>
+                    <select id="state" name="state">
                         <option value="">Select State</option>
                     </select>
                     <label for="city">City</label>
-                    <select id="city" name="city" required>
+                    <select id="city" name="city">
                         <option value="">Select City</option>
                     </select>
                     <label for="color">Favourite Color</label>
