--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </div>
                     <label for="Message">Message</label>
                     <textarea id="Message" name="Message" placeholder="Write something.."></textarea>
-                    <input type="submit" onclick="addRow()">
+                    <input type="submit" onclick="addRow()" text="Submit">
                 </div>
             </div>
             <div id="container2">
